--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^16.0.1",
     "@angular/router": "^16.0.1",
     "ngx-toaster": "^1.0.1",
+    "ngx-toastr": "^17.0.2",
     "primeng": "^16.0.0-rc.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
